--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-/* 
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600&family=Lora:wght@700&display=swap"); /* 
 ====== 
 Variables 
 ======
 */
 :root {
-  --primaryLightColor: #d4e6a5;
-  --primaryColor: #476a2e;
+  --primaryLightColor: #d4575a;
+  --primaryColor: #e998aa;
   --primaryDarkColor: #c02c03;
   --mainWhite: #fff;
   --offWhite: #f7f7f7;
@@ -36,8 +36,7 @@ Global Styles
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Dosis", sans-serif;
   color: var(--mainBlack);
   background: var(--mainBackground);
   line-height: 1.4;
@@ -166,7 +165,8 @@ Navbar
   color: var(--primaryColor);
 }
 .logo {
-  width: 12rem;
+  font-family: "Lora", serif;
+  font-size: 25px;
 }
 /* 
 ====== 
@@ -333,7 +333,7 @@ Cocktail
   background: var(--primaryLightColor);
   padding: 0.25rem 0.5rem;
   border-radius: var(--mainBorderRadius);
-  color: var(--primaryColor);
+  color: #fff;
 }
 .drink-info {
   padding-top: 2rem;
